--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 <body>
     <script type="text/javascript">
         $(document).ready(function() {
-            $('#embeddedtable').attr('src','https://hwg.maps.arcgis.com/home/item.html?id=b67f04a055d84400945795c4cb0e4d37#data');
+            //$('#embeddedtable').attr('src','https://hwg.maps.arcgis.com/home/item.html?id=b67f04a055d84400945795c4cb0e4d37#data');
+            $('#embeddedtable').attr('src','https://www.google.be');
         });
     </script>
     <iframe id="embeddedtable" name="embeddedtable" frameborder="0" width="100%" height="100%"></iframe>
